--- a/library_project/library_app/templates/library_app/book_detail.html
+++ b/library_project/library_app/templates/library_app/book_detail.html
@@ -22,6 +22,10 @@
         <li class="publish_year"><b>Data publikacji: </b> {{book.publish_date}} </li>
         <li class="book_detail_description"><b>Opis: </b> {{book.description|safe|linebreaksbr}} </li>
     </ul>
+
+    <div class="detail_back_link">
+        <a href="{% url 'library_app:book_list' %}"><input type="button" class="btn btn-dark" value="Powrót"></a>
+    </div>
 </div>
 
 {% endblock %}
