add html content

--- a/library_project/templates/thanks.html
+++ b/library_project/templates/thanks.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block body_block %}
-<h1>Dziękujemy za odwiedziny!</h1>
+<h1 class="page-title">Dziękujemy za odwiedziny!</h1>
 
 {% endblock %}
