--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -28,14 +28,21 @@
                     <a class="nav-link" href="{% url 'contact' %}">Kontakt</a>
                 </li>
                 <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'regulations' %}">Regulamin</a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" href="{% url 'library_app:book_list' %}">Katalog online</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
             {% if user.is_authenticated %}
                 <li class="nav-item active">
+                    <p class="nav-link">Witaj {{user.first_name}} {{user.last_name}}</p>
+                </li>
+                <li class="nav-item active">
                   <a class="nav-link" href="{% url 'accounts:logout' %}">Wyloguj</a>
                 </li>
+
     		{% else %}
     			<li class="nav-item active">
                     <a class="nav-link" href="{% url 'accounts:login' %}">Zaloguj się</a>
