menu fix and add responsive tables

--- a/library_project/library_app/templates/library_app/book_list.html
+++ b/library_project/library_app/templates/library_app/book_list.html
@@ -5,7 +5,7 @@
     <div class="page-title">
         <h2>Katalog Online</h2>
     </div>
-        <table class="table table-bordered table-hover">
+        <table class="table table-bordered table-hover table-responsive">
             <thead class="thead-light">
                 <tr>
                     <th scope="col">Tytuł</th>
