book list template fix

--- a/library_project/library_app/templates/library_app/book_list.html
+++ b/library_project/library_app/templates/library_app/book_list.html
@@ -5,7 +5,7 @@
     <div class="page-title">
         <h2>Katalog Online</h2>
     </div>
-        <table class="table table-bordered table-hover table-responsive">
+        <table class="table table-bordered table-hover">
             <thead class="thead-light">
                 <tr>
                     <th scope="col">Tytuł</th>
@@ -33,21 +33,3 @@
 {% endblock %}
 
 
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-        </tr>
-    </tbody>
-</table>
