--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -19,8 +19,11 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{% url 'index' %}">Biblioteka</a>
-        <div class="navbar">
-            <ul class="navbar-nav">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="navbarNavDropdown" class="navbar-collapse collapse">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'contact' %}">Kontakt</a>
                 </li>
@@ -30,9 +33,15 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'library_app:book_list' %}">Katalog online</a>
                 </li>
-
-                
+            </ul>
+            <ul class="navbar-nav">
             {% if user.is_authenticated %}
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'library_app:book_create' %}">Dodaj nową książkę</a>
+                </li>
+                 <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'library_app:author_create' %}">Dodaj autora</a>
+                </li>
                 <li class="nav-item active">
                     <p class="nav-link">Witaj {{user.first_name}} {{user.last_name}}</p>
                 </li>
