--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -46,6 +46,9 @@
                     <a class="nav-link" href="{% url 'library_app:publishinghouse_create' %}">Dodaj wydawnictwo</a>
                 </li>
                 <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'library_app:category_create' %}">Dodaj kategorię</a>
+                </li>
+                <li class="nav-item active">
                     <p class="nav-link">Witaj {{user.first_name}} {{user.last_name}}</p>
                 </li>
                 <li class="nav-item active">
