--- a/library_project/library_app/templates/library_app/book_detail.html
+++ b/library_project/library_app/templates/library_app/book_detail.html
@@ -16,11 +16,11 @@
         </li>
         <li class="title"><b>Tytuł: </b> {{book.title}} </li>
 
-        <li class="category"><b>Wydawnictwo: </b>
+        <li class="category"><b>Kategoria: </b>
             <a href="{% url 'library_app:category_detail' pk=book.category.pk %}">{{book.category.category_name}}</a>
         </li>
 
-        <li class="category"><b>Wydawnictwo: </b>
+        <li class="publishing_house"><b>Wydawnictwo: </b>
             <a href="{% url 'library_app:publishinghouse_detail' pk=book.publishing_house.pk %}">{{book.publishing_house.name}}</a>
         </li>
 
@@ -30,17 +30,20 @@
         <li class="book_detail_description"><b>Opis: </b> {{book.description|safe|linebreaksbr}} </li>
     </ul>
 
+    
     <div class="book_list_back_link button">
         <a href="{% url 'library_app:book_list' %}"><input type="button" class="btn btn-dark" value="Powrót"></a>
     </div>
 
-    <div class="update_book_link button">
-        <a href="{% url 'library_app:book_update' pk=book.pk %}"><input type="submit" class="btn btn-warning" value="Edytuj książkę"></a>
-    </div>
+    {% if user.is_authenticated and user.is_superuser %}
+        <div class="update_book_link button">
+            <a href="{% url 'library_app:book_update' pk=book.pk %}"><input type="submit" class="btn btn-warning" value="Edytuj książkę"></a>
+        </div>
 
-    <div class="delete_book_link button">
-        <a href="{% url 'library_app:book_delete' pk=book.pk %}"><input type="submit" class="btn btn-danger" value="Usuń książkę"></a>
-    </div>
+        <div class="delete_book_link button">
+            <a href="{% url 'library_app:book_delete' pk=book.pk %}"><input type="submit" class="btn btn-danger" value="Usuń książkę"></a>
+        </div>
+    {% endif %}
 </div>
 
 {% endblock %}
