--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -34,8 +34,8 @@
                     <a class="nav-link" href="{% url 'library_app:book_list' %}">Katalog online</a>
                 </li>
             </ul>
-            <ul class="navbar-nav">
-            {% if user.is_authenticated %}
+            <ul class="navbar-nav" >
+            {% if user.is_authenticated and user.is_superuser %}
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'library_app:book_create' %}">Dodaj nową książkę</a>
                 </li>
@@ -54,7 +54,13 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="{% url 'accounts:logout' %}">Wyloguj</a>
                 </li>
-
+            {% elif user.is_authenticated %}
+                <li class="nav-item active">
+                    <p class="nav-link">Witaj {{user.first_name}} {{user.last_name}}</p>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="{% url 'accounts:logout' %}">Wyloguj</a>
+                </li>
     		{% else %}
     			<li class="nav-item active">
                     <a class="nav-link" href="{% url 'accounts:login' %}">Zaloguj się</a>
