--- a/library_project/library_app/templates/library_app/book_detail.html
+++ b/library_project/library_app/templates/library_app/book_detail.html
@@ -6,7 +6,7 @@
     <h2>Szczegóły książki</h2>
     <ul>
         {% if book.image_url %}
-          <img src="{{book.image_url}}">
+          <img src="{{book.image_url}}" width="300px" height="300px">
         {% endif %}
         <li class="authors">
             <b>Autor: </b>
