--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -37,19 +37,17 @@
             <ul class="navbar-nav" >
             {% if user.is_authenticated and user.is_superuser %}
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'library_app:book_create' %}">Dodaj nową książkę</a>
-                </li>
-                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'library_app:author_create' %}">Dodaj autora</a>
+                    <a class="nav-link" href="{% url 'library_app:borrow_create' %}">Wypożycz książkę</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'library_app:publishinghouse_create' %}">Dodaj wydawnictwo</a>
+                    <a class="nav-link" href="{% url 'library_app:borrow_list' %}">Lista wypożyczeń</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'library_app:category_create' %}">Dodaj kategorię</a>
+                    <a class="nav-link" href="{% url 'librarian_panel' %}">Zarządzaj biblioteką</a>
                 </li>
+
                 <li class="nav-item active">
-                    <p class="nav-link">Witaj {{user.first_name}} {{user.last_name}}</p>
+                    <p class="nav-link">Bibliotekarz {{user.first_name}} {{user.last_name}}</p>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="{% url 'accounts:logout' %}">Wyloguj</a>
