--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -43,6 +43,10 @@
                     <a class="nav-link" href="{% url 'library_app:borrow_list' %}">Lista wypożyczeń</a>
                 </li>
                 <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'library_app:bookcopy_list' %}">Lista kopii</a>
+                </li>
+
+                <li class="nav-item active">
                     <a class="nav-link" href="{% url 'librarian_panel' %}">Zarządzaj biblioteką</a>
                 </li>
 
