--- a/library_project/templates/librarian_panel.html
+++ b/library_project/templates/librarian_panel.html
@@ -3,6 +3,7 @@
 {% block body_block %}
 <h1 class="page-title">Panel Bibliotekarza</h1>
 <p><a class="btn btn-primary" href="{% url 'library_app:book_create' %}">Dodaj nową książkę</a></p>
+<p><a class="btn btn-primary" href="{% url 'library_app:bookcopy_create' %}">Dodaj nowy egzemplarz książki</a></p>
 <p><a class="btn btn-primary" href="{% url 'library_app:author_create' %}">Dodaj autora</a></p>
 <p><a class="btn btn-primary" href="{% url 'library_app:publishinghouse_create' %}">Dodaj wydawnictwo</a></p>
 <p><a class="btn btn-primary" href="{% url 'library_app:category_create' %}">Dodaj kategorię</a></p>  
