--- a/library_project/library_app/templates/library_app/book_list.html
+++ b/library_project/library_app/templates/library_app/book_list.html
@@ -22,7 +22,9 @@
                     <tr>
                         <td>
                             <a href="{% url 'library_app:book_detail' pk=book.pk %}"><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20"></a>
-                            <a href="{% url 'library_app:book_delete' pk=book.pk %}"><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń" width="20" height="20"></a> 
+                            {% if user.is_superuser %}
+                                <a href="{% url 'library_app:book_delete' pk=book.pk %}"><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń" width="20" height="20"></a> 
+                            {% endif %}
                         </td>
 
                         <td><a href="{% url 'library_app:book_detail' pk=book.pk %}">{{book.title}}</a></td>
