--- a/library_project/library_app/templates/library_app/borrow_list.html
+++ b/library_project/library_app/templates/library_app/borrow_list.html
@@ -4,7 +4,7 @@
 {% block body_block %}
 <div class="container">
     <div class="page-title">
-        <h2>Katalog Online</h2>
+        <h2>Wypożyczenia</h2>
     </div>
     <table class="table table-bordered table-hover">
         <thead class="thead-light">
@@ -23,7 +23,9 @@
             <tr>
                 <td>
                     <a href="{% url 'library_app:borrow_detail' pk=borrow.pk %}"><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20"></a>
-                    <a href="{% url 'library_app:borrow_delete' pk=borrow.pk %}"><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń" width="20" height="20"></a> 
+                    {% if user.is_superuser %}
+                        <a href="{% url 'library_app:borrow_delete' pk=borrow.pk %}"><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń" width="20" height="20"></a> 
+                    {% endif %}
                 </td>
                 <td>{{borrow.user}}</td>
                 <td>{{borrow.book_copy_id.book}}</td>
