--- a/library_project/static/css/style.css
+++ b/library_project/static/css/style.css
@@ -61,4 +61,10 @@ h1{
     margin-top: 20px;
 }
 
+.pagination_bar{
+    text-align: center;
+    margin-bottom: 40px;
+    margin-top: 10px;
+}
+
 
