--- a/library_project/library_app/templates/library_app/borrow_list.html
+++ b/library_project/library_app/templates/library_app/borrow_list.html
@@ -6,6 +6,7 @@
     <div class="page-title">
         <h2>Wypożyczenia</h2>
     </div>
+
     <table class="table table-bordered table-hover">
         <thead class="thead-light">
             <tr>
@@ -18,7 +19,6 @@
             </tr>
         </thead>
         <tbody>
-
             {% for borrow in borrow_list %}
             <tr>
                 <td>
@@ -29,13 +29,42 @@
                 </td>
                 <td>{{borrow.user}}</td>
                 <td>{{borrow.book_copy_id.book}}</td>
-                <td>{{borrow.id}}</td>
+                <td>{{borrow.book_copy_id.id}}</td>
                 <td>{{borrow.borrow_date}}</td>
                 <td>{{borrow.receive_date}}</td>
             </tr>
             {% endfor %}
-
         </tbody>
     </table>
+
+    <!-- pagination bar -->
+     <div class="pagination_bar">
+        {% if is_paginated %}
+        <div class="btn-group" role="group">
+            
+            {% if page_obj.has_previous %}
+                <a class="btn btn-light disable" href="?page={{ page_obj.previous_page_number }}">&laquo;</a>
+            {% else %}
+                <a class="btn btn-light"><span>&laquo;</span></a>
+            {% endif %}
+
+            {% for i in paginator.page_range %}
+                {% if page_obj.number == i %}
+                <a  class="btn btn-dark active"><span>{{ i }} <span class="sr-only">(current)</span></span></a>
+                {% else %}
+                <a class="btn btn-light" href="?page={{ i }}">{{ i }}</a>
+                {% endif %}
+            {% endfor %}
+                
+            {% if page_obj.has_next %}
+            <a class="btn btn-light" href="?page={{ page_obj.next_page_number }}">&raquo;</a>
+            {% else %}
+            <a type="button" class="btn btn-light"><span>&raquo;</span></a>
+            {% endif %}
+        </div>
+        {% endif %}
+    </div>
+    
+   
 </div>
 {% endblock %}
