--- a/library_project/library_app/templates/library_app/bookcopy_form.html
+++ b/library_project/library_app/templates/library_app/bookcopy_form.html
@@ -3,7 +3,7 @@
 
 {% block body_block %}
     <h1>Dodaj nowy egzemplarz książki</h1>
-    <div class="book_create_other_create_links">
+    <div class="other_create_buttons">
         <a class="btn btn-primary" href="{% url 'library_app:book_create' %}">Dodaj książkę</a>
     </div>
    
