--- a/library_project/library_app/templates/library_app/book_detail.html
+++ b/library_project/library_app/templates/library_app/book_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load custom_tags %}
 
 {% block body_block %}
 
@@ -28,6 +29,10 @@
         <li class="edition"><b>Wydanie: </b> {{book.edition}} </li>
         <li class="publish_year"><b>Data publikacji: </b> {{book.publish_date}} </li>
         <li class="book_detail_description"><b>Opis: </b> {{book.description|safe|linebreaksbr}} </li>
+        <li class="book_bookcopies"><b>Liczba egzemplarzy: </b> {{book.bookcopies.count}} </li>
+        
+        {% free_bookcopies_counter_tag book.bookcopies as free_bookcopies %}
+        <li class="book_bookcopies"><b>Liczba wolnych: </b> {{free_bookcopies}} </li>
     </ul>
 
     
@@ -40,9 +45,14 @@
             <a href="{% url 'library_app:book_update' pk=book.pk %}"><input type="submit" class="btn btn-warning" value="Edytuj książkę"></a>
         </div>
 
-        <div class="delete_book_link button">
-            <a href="{% url 'library_app:book_delete' pk=book.pk %}"><input type="submit" class="btn btn-danger" value="Usuń książkę"></a>
-        </div>
+        {% if book.bookcopies.count > 0 %}
+        <h6>Nie można usuwać ksiązek które mają jakiś egzemplarz</h6>
+        {% else %}
+            <div class="delete_book_link button">
+                <a href="{% url 'library_app:book_delete' pk=book.pk %}"><input type="submit" class="btn btn-danger" value="Usuń książkę"></a>
+            </div>
+        {% endif %}
+
     {% endif %}
 </div>
 
