--- a/library_project/library_app/templates/library_app/book_list.html
+++ b/library_project/library_app/templates/library_app/book_list.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
+{% load custom_tags %}
+
 
 {% block body_block %}
 <div class="container">
@@ -14,6 +16,8 @@
                     <th scope="col">Autor</th>
                     <th scope="col">Kategoria</th>
                     <th scope="col">Wydawnictwo</th>
+                    <th scope="col">Egzemplarzy</th>
+                    <th scope="col">Wolnych egzemplarzy</th>
                 </tr>
             </thead>
             <tbody>
@@ -22,7 +26,7 @@
                     <tr>
                         <td>
                             <a href="{% url 'library_app:book_detail' pk=book.pk %}"><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20"></a>
-                            {% if user.is_superuser %}
+                            {% if user.is_superuser and book.bookcopies.count == 0 %}
                                 <a href="{% url 'library_app:book_delete' pk=book.pk %}"><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń" width="20" height="20"></a> 
                             {% endif %}
                         </td>
@@ -37,10 +41,18 @@
 
                         <td><a href="{% url 'library_app:category_detail' pk=book.category.pk %}">{{book.category.category_name}}</a></td>
                         <td><a href="{% url 'library_app:publishinghouse_detail' pk=book.publishing_house.pk %}">{{book.publishing_house}}</a></td>
+                        <td>{{book.bookcopies.count}}</td>
+
+                        {% free_bookcopies_counter_tag book.bookcopies as free_bookcopies %}
+                        <td>{{free_bookcopies}}</td>
                     </tr>
             {% endfor %}
             </tbody>
         </table>
+
+        {% if user.is_superuser %}
+            <p>Nie można usuwać ksiązek które mają jakiś egzemplarz</p>
+        {% endif %}
 
     <!-- pagination bar -->
     <div class="pagination_bar">
