--- a/library_project/library_app/templates/library_app/bookcopy_list.html
+++ b/library_project/library_app/templates/library_app/bookcopy_list.html
@@ -4,8 +4,12 @@
 {% block body_block %}
 <div class="container">
     <div class="page-title">
-        <h2>Lista Kopii</h2>
+        <h2>Lista Egzemplarzy</h2>
     </div>
+        <div class="other_create_buttons">
+            <a class="btn btn-primary" href="{% url 'library_app:bookcopy_create' %}">Dodaj egzemplarz książki</a>
+        </div>
+
         <table class="table table-bordered table-hover">
             <thead class="thead-light">
                 <tr>
@@ -20,15 +24,34 @@
                     <tr>
                          <td>
                             <a href="{% url 'library_app:bookcopy_detail' pk=bookcopy.pk %}"><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20"></a>
-                            <a href="{% url 'library_app:bookcopy_delete' pk=bookcopy.pk %}"><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń" width="20" height="20"></a> 
+                            {% if bookcopy.is_borrowed == False %}
+                                <a href="{% url 'library_app:bookcopy_delete' pk=bookcopy.pk %}"><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń" width="20" height="20"></a> 
+                            {% endif %}
                         </td>
-                        <td>{{bookcopy.book}}</td>
-                        <td>{{bookcopy.is_borrowed}}</td>
+                        
+                        <td>
+                            {% for author in bookcopy.book.authors.all %}
+                            <a href="{% url 'library_app:author_detail' pk=author.pk %}">{{author.first_name}} {{author.last_name}}</a>
+                            {% endfor %}
+
+                            <a href="{% url 'library_app:book_detail' pk=bookcopy.book.pk %}">{{bookcopy.book.title}}</a>
+                            <a href="{% url 'library_app:bookcopy_detail' pk=bookcopy.pk %}">kopia nr: {{bookcopy.id}}</a>
+                        </td>
+
+                        {% if bookcopy.is_borrowed %}
+                            <td>Tak</td>
+                        {% else %}
+                            <td>Nie</td>
+                        {% endif %}
+                        
                     </tr>
             {% endfor %}
 
             </tbody>
         </table>
+        {% if user.is_superuser %}
+            <p>Nie można usuwać egzemplarzy książek które są wypożyczone</p>
+        {% endif %}
 </div>
 {% endblock %}
 
